--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@
     justify-content: space-between;
     align-items: center;
     background-color: #264653;
-    height: 83px;
+    height: 56px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 0 20px;
+    padding: 0 26px;
+    position: fixed;
+    width: 97%;
     font-family: Georgia, serif;
 }
 
@@ -19,6 +21,7 @@
 .navbar-logo p{
     color: white;
     font-size: 22px;
+    font-family: initial;
 }
 .navbar-logo p span{
     color: Red;
@@ -39,8 +42,9 @@
     color: #f2f2f2;
     text-align: center;
     margin: 0px 12px;
+    margin-right: 25px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
    
    
 }
@@ -63,11 +67,14 @@ body{
     justify-content: space-around;
 }
 .para{
-    margin: 120px 0px;
-    font-size: 30px;
-    max-width: 400px;
+    margin: 140px 0px;
+    font-size: 33px;
+    max-width: 450px;
     color: aliceblue;
 
+}
+.para h3 span{
+    color: red;
 }
 .para h3{
     color: blueviolet;
@@ -77,12 +84,13 @@ body{
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  color: black;
+ font-weight: bold;
 }
 .main-img img{
     margin: 60px;
     height: 400px;
     width: 500px;
-border-radius: 20px;
+/* border-radius: 20px; */
 }
 .service {
     padding: 1px;
@@ -97,14 +105,14 @@ border-radius: 20px;
     
     /* background-color:yellow; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .course-image1 img{
     margin: 110px 0px 0px 0px;
     height: 300px;
     width: 428px;
-    border-radius: 20px;
+    border-radius: 14px;
     max-width: 400px;
     
 
@@ -126,7 +134,7 @@ border-radius: 20px;
     height: 300px;
     width: 428px;
     max-width: 400px;
-    border-radius: 20px;
+    border-radius: 15px;
     
 
 }
@@ -134,18 +142,28 @@ border-radius: 20px;
     margin: 110px 0px 0px 0px;
     height: 300px;
     width: 428px;
-    border-radius: 20px;
+    border-radius: 15px;
 
 }
 
-.course-image1 h1{
+.course-image1 p{
     text-align: center;
+    font-size: 20px;
+    color: red;
+    font-weight: bold;
+    
 }
-.course-image2 h1{
+.course-image2 p{
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: red;
 }
-.course-image3 h1{
+.course-image3 p{
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: red;
 }
 .course a{
     text-decoration: none;
@@ -189,7 +207,8 @@ border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(242, 247, 247);
+     background-color: rgb(242, 247, 247);
+     
     border: black solid 1px;
 }
 
@@ -222,7 +241,7 @@ border-radius: 20px;
     color: aliceblue;
     font-style:inherit;
     padding: 1px;
-    font-size: 20px;
+    font-size: 16px;
 
     
     /* justify-content: center; */
@@ -230,9 +249,7 @@ border-radius: 20px;
 .backend-courses{
     display: flex;
     flex-direction: column;
-    
-    
-
+    background-color: rgb(226 232 240);
     
 }
 .backend-courses .section1{
@@ -269,7 +286,7 @@ border-radius: 20px;
 .section1 .box h4{
     /* margin: 4px 4px; */
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     color:rgb(0, 0, 0);
     /* font-style: oblique; */
     
@@ -281,7 +298,7 @@ border-radius: 20px;
 .section2 .box h4{
     /* margin: 4px 4px; */
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     color:rgb(0, 0, 0);
     /* font-style: oblique; */
 }
